app/styles/views/_quick-jump.scss
.quick-jump {
  $search-icon-size: rem-calc(30px);

  @include single-transition(background-color, 150ms, linear);
  @include clearfix;

  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  pointer-events: none;
  overflow-y: auto;

  > * {
    pointer-events: all;
  }

  &.loading {
    .results .content {
      opacity: 0.7;
    }
  }

  &.active {
    background-color: $overlay-transparent-background;

    .bar {
      background-color: $white;
      border-bottom: 1px solid $quick-jump-header-background-color;

      .progress-indicator {
        background-color: $primary-color;
        color: $white;
      }
    }
  }

  .bar, .actions {
    padding: 0 $column-gutter / 2;
  }

  .bar {
    position: relative;
    display: block;
    width: 100%;

    background-color: $quick-jump-header-background-color;
    height: $quick-jump-height;
    line-height: $quick-jump-height;


    .progress-indicator {
      @include single-transition(all, 150ms, linear);

      border-radius: 50%;
      color: $primary-color;
      margin-top: - $search-icon-size / 2;
      position: absolute;
      text-align: center;
      top: 50%;
      width: $search-icon-size;
      overflow: hidden;
    }

    i {
      @include icon(search);
    }

    .progress-indicator, i {
      display: block;
      height: $search-icon-size;
      line-height: $search-icon-size;
    }

    input {
      @include single-transition(all, 150ms, linear);

      background-color: transparent;
      border-width: 0;
      box-shadow: none;
      display: inline-block;
      margin: 0;
      text-indent: $search-icon-size + rem-calc(5px);
      width: 100%;
    }
  }

  .liquid-actions {
    overflow: visible;
  }

  .actions {
    $button-size: rem-calc(30px);

    position: absolute;
    right: 0;
    top: 0;
    text-align: right;
    width: 10%;

    button {
      height: $button-size;
      width: $button-size;
      margin-bottom: 0px;
    }

    .close {
      @include icon(times-circle);

      border-width: 0;
      background-color: transparent;
    }

    .change-app {
      @include icon(th);
    }

    .add {
      @include icon(plus);
    }

    .apps, .add-actions {
      @extend %dropdown;

      text-align: left;
      min-width: rem-calc(150px);
    }
  }

  .liquid-results {
    @extend %static-liquid-container;
  }

  .results {
    position: relative;
    width: 100%;
    background-color: $quick-jump-results-background-color;

    .content {
      @include single-transition(opacity, 150ms, linear);

      padding: $column-gutter / 2;

      ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
      }

      li {
        height: $quick-jump-results-item-height;
        line-height: $quick-jump-results-item-height;
      }

      article, h1 {
        padding: 0 $column-gutter / 2;
      }

      article {
        border-bottom: rem-calc(1px) solid #e8e8e8;
        cursor: pointer;

        &:hover {
          background-color: #eeeeee;
        }
      }

      section {
        margin: $column-gutter / 2 $column-gutter;
        padding: $column-gutter / 2;
        font-size: $base-font-size;

        h1 {
          @extend %heading-medium-uppercase;

          margin-bottom: $column-gutter / 2;
          line-height: rem-calc(30px);
        }
      }
    }
  }
}

